@startuml
'https://plantuml.com/component-diagram

object calculateShards

abstract Input {
one: App
}

abstract Output {
many: List<App>
}

class App {
name: String
tests: List<Test>
}

class Test {
name: String
cases: List<Test>
}

class Case {
name: String
duration: Long
}

calculateShards ..> Input : receive
calculateShards ..> Output : return

Input "1" o-- "1" App
Output "1" o-- "*" App
App "1" o-- "*" Test
Test "1" o-- "*" Case

@enduml
